新增 熄屏常显支持横屏 优化 不开启熄屏常显功能时，也可以通过桌面按钮进入常显

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
                 android:resource="@xml/accessibilityservice" />
         </service>
 
-        <activity android:name=".ui.activity.AlwaysOnDisplayActivity" />
+        <activity android:name=".ui.activity.AlwaysOnDisplayActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.activity.SettingActivity" />
         <activity android:name=".ui.activity.LauncherActivity">
             <intent-filter>
